<resources>
	<string name="app_name">Nocna zmiana</string>
	<string name="activity_settings">Ustawienia</string>
	<string name="activity_help">Zasady gry</string>
	<string name="button_nick_change_apply">Zmień</string>
	<string name="button_cancel">Anuluj</string>
	<string name="button_retry_connection">Spróbuj ponownie</string>
	<string name="button_create_server">Stwórz nową grę</string>
	<string name="button_join_server">Dołącz do gry</string>
	<string name="button_create_server_apply">Stwórz grę</string>
	<string name="button_join_server_apply">Dołącz do gry</string>
	<string name="button_user_ready">Jestem gotowy</string>
	<string name="button_user_spectate">Oglądaj grę</string>
	<string name="button_ok">OK</string>
	<string name="button_leave">Wyjdź</string>
	<string name="button_remain">Zostań</string>
	<string name="button_done">Gotowe</string>
	<string name="button_veto">Weto</string>
	<string name="button_veto_accept">Przyjmij</string>
	<string name="button_veto_reject">Odrzuć</string>
	<string name="button_choose_player_checking">Sprawdź gracza</string>
	<string name="button_choose_acts_checking">Sprawdź ustawy</string>
	<string name="button_end_game">Zakończ grę</string>
	<string name="text_nick">Podaj swój nick</string>
	<string name="text_nick_hint">Nick można zmienić później w ustawieniach</string>
	<string name="text_connecting">Łączenie…</string>
	<string name="text_cannot_connect">Nie można połączyć</string>
	<string name="text_server_name">Nazwa gry</string>
	<string name="text_server_code">Kod gry</string>
	<string name="text_server">Nazwa:</string>
	<string name="text_code">Kod:</string>
	<string name="text_users_amount">Gracze: %d</string>
	<string name="text_ready_users_amount">Gotowi do gry: %d</string>
	<string name="text_too_few_users">Za mało, aby grać</string>
	<string name="text_game_in_progress">Gra już trwa</string>
	<string name="text_all_players">Wszyscy gracze</string>
	<string name="text_vote_yes">Za</string>
	<string name="text_vote_no">Przeciw</string>
	<string name="text_votes">Głosy</string>
	<string name="text_votes_value">%d/%d</string>
	<string name="text_your_vote_yes">Zagłosowano za</string>
	<string name="text_your_vote_no">Zagłosowano przeciw</string>
	<string name="text_poll_index_change_hint">Jeśli premier nie zostanie wybrany w najbliższej rundzie, zostanie uchwalona losowa ustawa</string>
	<string name="text_acts_lustration">Ustawy lustracyjne</string>
	<string name="text_acts_antilustration">Ustawy antylustracyjne</string>
	<string name="text_poll_index">Wskaźnik wyborczy</string>
	<string name="text_waiting_for_veto_response">Oczekiwanie na prezydenta…</string>
	<string name="text_veto_accepted">Weto przyjęte</string>
	<string name="text_veto_rejected">Weto odrzucone</string>
	<string name="text_checking_result_positive">%s jest ministrem</string>
	<string name="text_checking_result_negative">%s jest TW lub Bolkiem</string>
	<string name="text_lustration_result_bolek">%s był Bolkiem</string>
	<string name="text_lustration_result_not_bolek">%s nie był Bolkiem</string>
	<string name="text_win_cause_acts_ministers">Zostało uchwalonych 5 ustaw lustracyjnych</string>
	<string name="text_win_cause_acts_collaborators">Zostało uchwalonych 6 ustaw antylustracyjnych</string>
	<string name="text_win_cause_bolek_ministers">Bolek został wyeliminowany</string>
	<string name="text_win_cause_bolek_collaborators">Bolek został premierem po trzeciej ustawie antylustracyjnej</string>
	<string name="text_act_passed">uchwalona</string>
	<string name="text_act_not_passed">nie uchwalona</string>
	<string name="text_players">Gracze</string>
	<string name="text_non_players">Nie grający</string>
	<string name="text_user_mute">Wycisz</string>
	<string name="text_user_unmute">Wyłącz wyciszenie</string>
	<string name="text_spectator_mode">Tryb widza</string>
	<string name="message_invalid_nick_length">Nick musi mieć od 3 do 20 znaków</string>
	<string name="message_invalid_nick_chars">Nick nie może zawierać niektórych znaków</string>
	<string name="message_server_name_too_short">Za krótka nazwa</string>
	<string name="message_server_name_invalid">Niewłaściwa nazwa</string>
	<string name="message_too_many_servers">Serwer zajęty</string>
	<string name="message_invalid_username">Niewłaściwa nazwa użytkownika</string>
	<string name="message_too_many_users">Za dużo graczy</string>
	<string name="message_username_busy">Ta nazwa użytkownika jest zajęta</string>
	<string name="message_server_code_length">Kod musi mieć 4 znaki</string>
	<string name="message_server_code_invalid">Kod nieprawidłowy</string>
	<string name="message_cannot_create_server">Nie można utworzyć gry</string>
	<string name="message_cannot_login">Nie można zalogować</string>
	<string name="message_error">Nieznany błąd</string>
	<string name="message_invalid_user">Niewłaściwy użytkownik</string>
	<string name="message_voice_chat_network_error">Błąd sieci</string>
	<string name="dialog_invalid_nick">Niewłaściwy nick</string>
	<string name="dialog_invalid_nick_length_detail">Nick musi mieć od 3 do 20 znaków</string>
	<string name="dialog_invalid_nick_chars_detail">Nick nie może zawierać niektórych znaków</string>
	<string name="dialog_disconnection">Rozłączono</string>
	<string name="dialog_disconnection_detail">Utracono połączenie z serwerem</string>
	<string name="dialog_too_few_players">Za mało graczy</string>
	<string name="dialog_too_few_players_detail">Gra została zakończona</string>
	<string name="dialog_player_leaved">%s wyszedł z gry</string>
	<string name="dialog_leave_are_you_sure">Czy na pewno chcesz wyjść?</string>
	<string name="dialog_leave_are_you_sure_detail">Po wyjściu nie będziesz mógł kontynuować gry</string>
	<string name="dialog_leave_are_you_sure_detail_game_end">Po wyjściu gra zostanie zakończona ze względu na zbyt małą liczbę graczy</string>
	<string name="dialog_you_are_lustrated">Zostałeś wyeliminowany przez prezydenta %s</string>
	<string name="dialog_you_are_lustrated_detail">Odchodzisz z gry</string>
	<string name="snackbar_action_change_username">Zmień</string>
	<string name="item_game_main">Gra</string>
	<string name="item_game_acts">Ustawy</string>
	<string name="item_game_players">Gracze</string>
	<string name="item_game_chat">Czat</string>
	<string name="action_player_leaved">%s wyszedł z gry</string>
	<string name="action_role_assigned">Zostałeś %s</string>
	<string name="action_stack_refilled">Stos ustaw został uzupełniony</string>
	<string name="action_president_assigned">%s został prezydentem</string>
	<string name="action_president_assigned_you">Zostałeś prezydentem</string>
	<string name="action_president_assigned_again">%s został ponownie prezydentem</string>
	<string name="action_president_assigned_again_you">Ponownie zostałeś prezydentem</string>
	<string name="action_choose_prime_minister">Wybierz premiera</string>
	<string name="action_prime_minister_chosen">%s został wybrany na premiera przez %s</string>
	<string name="action_prime_minister_chosen_you">%s wybrał cię na premiera</string>
	<string name="action_prime_minister_chosen_by_you">Wybrałeś %s na premiera</string>
	<string name="action_vote_on_prime_minister">Głosowanie nad premierem %s</string>
	<string name="action_prime_minister_assigned">%s został premierem</string>
	<string name="action_prime_minister_assigned_you">Zostałeś premierem</string>
	<string name="action_prime_minister_assigned_empty">Stanowisko premiera zostało opróżnione</string>
	<string name="action_poll_index_change">Wskaźnik wyborczy został zmieniony</string>
	<string name="action_choose_acts_president">Wybierz dwie ustawy</string>
	<string name="action_choose_acts_prime_minister">Wybierz ustawę, którą chcesz uchwalić</string>
	<string name="action_president_choosing_acts">Prezydent %s wybiera ustawy</string>
	<string name="action_prime_minister_choosing_acts">Premier %s wybiera ustawy</string>
	<string name="action_veto_request">Premier %s złożył wniosek o weto</string>
	<string name="action_veto_request_you">Złożyłeś wniosek o weto</string>
	<string name="action_veto_response_accepted">Weto zostało przyjęte przez prezydenta %s</string>
	<string name="action_veto_response_rejected">Weto zostało odrzucone przez prezydenta %s</string>
	<string name="action_act_passed">Została uchwalona ustawa</string>
	<string name="action_random_act_passed">Została uchwalona losowa ustawa</string>
	<string name="action_president_checking_player">Uchwalona ustawa antylustracyjna pozwala prezydentowi %s sprawdzić jednego gracza</string>
	<string name="action_president_checking_player_after_choose">Prezydent %s sprawdza jednego gracza</string>
	<string name="action_check_player">Uchwalona ustawa antylustracyjna pozwala ci sprawdzić jednego gracza</string>
	<string name="action_check_player_no_description">Wybierz gracza, którego chcesz sprawdzić</string>
	<string name="action_check_player_result">Sprawdziłeś %s</string>
	<string name="action_president_checked_player">Prezydent %s sprawdził %s</string>
	<string name="action_president_checked_player_you">Prezydent %s sprawdził ciebie</string>
	<string name="action_president_checking_player_or_acts">Uchwalona ustawa antylustracyjna pozwala prezydentowi %s sprawdzić jednego gracza lub 3 następne ustawy</string>
	<string name="action_choose_player_or_acts_checking">Uchwalona ustawa antylustracyjna pozwala ci sprawdzić jednego gracza lub 3 następne ustawy</string>
	<string name="action_president_checking_acts">Uchwalona ustawa antylustracyjna pozwala prezydentowi %s sprawdzić 3 następne ustawy</string>
	<string name="action_president_checking_acts_after_choose">Prezydent %s sprawdza 3 następne ustawy</string>
	<string name="action_choose_acts_checking">Uchwalona ustawa antylustracyjna pozwala ci sprawdzić 3 następne ustawy</string>
	<string name="action_acts_checking_result">Oto 3 następne ustawy</string>
	<string name="action_president_checked_acts">Prezydent %s sprawdził 3 następne ustawy</string>
	<string name="action_president_choosing_president">Uchwalona ustawa antylustracyjna pozwala prezydentowi %s wybrać nowego prezydenta</string>
	<string name="action_choose_president">Uchwalona ustawa antylustracyjna pozwala ci wybrać nowego prezydenta</string>
	<string name="action_president_chosen_presiednt">Na nowego prezydenta został wybrany %s</string>
	<string name="action_president_chosen_president_you">Zostałeś wybrany na nowego prezydenta</string>
	<string name="action_president_lustrating">Uchwalona ustawa antylustracyjna pozwala prezydentowi %s wyeliminować jednego gracza.</string>
	<string name="action_lustrate">Uchwalona ustawa antylustracyjna pozwala ci wyeliminować jednego gracza</string>
	<string name="action_lustration_result">Gracz %s został wyeliminowany przez prezydenta %s</string>
	<string name="action_lustration_result_you">Wyeliminowałeś gracza %s</string>
	<string name="action_win_ministers">Ministrowie wygrywają</string>
	<string name="action_win_collaborators">Tajni współpracownicy wygrywają</string>
	<string name="preference_nick">Twój nick</string>
	<string name="preference_server_address">Adres serwera</string>
	<string name="preference_voice_chat">Czat głosowy</string>
	<string name="preference_voice_chat_detail">Może działać niestabilnie</string>
	<string name="default_nick" />
	<string name="default_server_address">nz.sci.edu.pl</string>
	<string name="role_minister">Minister</string>
	<string name="role_collaborator">Tajny współpracownik</string>
	<string name="role_bolek">Bolek</string>
	<string name="role_minister_instr">ministrem</string>
	<string name="role_collaborator_instr">tajnym współpracownikiem</string>
	<string name="role_bolek_instr">Bolkiem</string>
	<string name="acc_text_chat_hint_message">Wiadomość</string>
	<string name="acc_text_chat_send">Wyślij</string>
	<string name="acc_voice_chat_user">Ustawienia gracza</string>
	<string name="unknown">Nieznany</string>
	<string name="percent_100">100%</string>
</resources>