<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	
	<pl.karol202.bolekgame.settings.CallableEditTextPreference
		android:defaultValue="@string/default_nick"
		android:key="preference_nick"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:title="@string/preference_nick" />
	<EditTextPreference
		android:defaultValue="@string/default_server_address"
		android:key="preference_server_address"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:title="@string/preference_server_address" />
	<CheckBoxPreference
		android:defaultValue="@bool/voice_chat_default_enable"
		android:key="preference_voice_chat"
		android:title="@string/preference_voice_chat"
		android:summary="@string/preference_voice_chat_detail"/>
</PreferenceScreen>