<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	
	<TextView
		android:id="@+id/text_vote_on_prime_minister"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/action_vote_on_prime_minister"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/text_primary" />
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<Button
			android:id="@+id/button_vote_on_prime_minister_yes"
			style="@style/ButtonVoteYes"
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:layout_marginBottom="16dp"
			android:layout_marginEnd="8dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="8dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/text_vote_yes" />
		
		<Button
			android:id="@+id/button_vote_on_prime_minister_no"
			style="@style/ButtonVoteNo"
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:layout_marginEnd="16dp"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="16dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:background="@drawable/button_vote_no"
			android:text="@string/text_vote_no" />
	
	</LinearLayout>
	
	<TextView
		android:id="@+id/text_vote_on_prime_minister_your_vote"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginStart="8dp"
		android:text="@string/text_your_vote_yes"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/text_primary"
		android:layout_marginLeft="8dp" />
</LinearLayout>