<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="56dp"
	android:background="@drawable/background_item"
	android:clickable="true"
	android:focusable="true">
	
	<TextView
		android:id="@+id/text_user_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="8dp"
		android:layout_marginStart="16dp"
		android:text="@string/unknown"
		android:textAppearance="?android:attr/textAppearanceMedium"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraintLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="4dp"
		android:layout_marginRight="4dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		<Button
			android:id="@+id/button_user_ready"
			style="@style/ButtonAccent"
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:layout_marginEnd="4dp"
			android:layout_marginRight="4dp"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:text="@string/button_user_ready"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<Button
			android:id="@+id/button_user_spectate"
			style="@style/ButtonAccent"
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:layout_marginEnd="4dp"
			android:layout_marginRight="4dp"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:text="@string/button_user_spectate"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<android.support.v7.widget.AppCompatImageButton
			android:id="@+id/button_user_settings"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:background="@drawable/button_transparent"
			android:contentDescription="@string/acc_voice_chat_user"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_user_settings_black_24dp"
			app:tint="@drawable/icon_tint" />
	
	</android.support.constraint.ConstraintLayout>
	
</android.support.constraint.ConstraintLayout>