<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/main_layout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<TextView
		android:id="@+id/text_nick"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginStart="8dp"
		android:text="@string/text_nick"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/text_primary"
		app:layout_constraintBottom_toTopOf="@+id/editTextLayout_nick"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginLeft="8dp" />
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/editTextLayout_nick"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="8dp"
		app:hintEnabled="false"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.45">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/editText_nick"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</android.support.design.widget.TextInputLayout>
	
	<Button
		android:id="@+id/button_nick_accept"
		style="@style/ButtonAccent"
		android:layout_width="wrap_content"
		android:layout_height="40dp"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/button_done"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextLayout_nick"
		android:layout_marginRight="8dp" />
	
	<TextView
		android:id="@+id/text_nick_hint"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="16dp"
		android:text="@string/text_nick_hint"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button_nick_accept" />

</android.support.constraint.ConstraintLayout>