<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/main_layout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/view_text_background"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="@color/dark_background"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		<TextView
			android:id="@+id/text_server_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/text_server"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/white"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginLeft="16dp" />
		
		<TextView
			android:id="@+id/text_server_name_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/unknown"
			android:textColor="@color/text_server"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="bold"
			app:layout_constraintLeft_toRightOf="@id/text_server_name"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginStart="8dp" />
		
		<TextView
			android:id="@+id/text_server_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/text_code"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/white"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/text_server_name"
			android:layout_marginLeft="16dp" />
		
		<TextView
			android:id="@+id/text_server_code_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/unknown"
			android:textColor="@color/text_server"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="bold"
			app:layout_constraintLeft_toRightOf="@id/text_server_code"
			app:layout_constraintTop_toBottomOf="@+id/text_server_name_value"
			android:layout_marginStart="8dp" />
		
	</android.support.constraint.ConstraintLayout>
	
	<android.support.v7.widget.RecyclerView
		android:id="@+id/recycler_users"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/view_text_background" />

</android.support.constraint.ConstraintLayout>