<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@drawable/background_user_settings_popup"
	android:orientation="vertical"
	android:padding="1dp">
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/panel_user_mute"
		android:layout_width="wrap_content"
		android:layout_height="48dp"
		android:background="@drawable/button"
		android:clickable="true"
		android:focusable="true">
		
		<android.support.v7.widget.AppCompatImageButton
			android:id="@+id/image_user_mute"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:scaleType="center"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_speaker_off_black_24dp"
			app:tint="@drawable/icon_tint"
			android:background="@color/button_transparent"/>
		
		<TextView
			android:id="@+id/text_user_mute"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="16dp"
			android:text="@string/text_user_mute"
			android:textAppearance="?android:attr/textAppearanceMedium"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toEndOf="@+id/image_user_mute"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginRight="8dp"
			android:layout_marginLeft="16dp" />
		
		<TextView
			android:id="@+id/text_user_mute_placeholder"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="16dp"
			android:text="@string/text_user_unmute"
			android:textAppearance="?android:attr/textAppearanceMedium"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/image_user_mute"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginRight="8dp"
			android:layout_marginLeft="16dp"
			android:visibility="invisible"/>
	</android.support.constraint.ConstraintLayout>
	
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider" />
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/panel_user_volume"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/button">
		
		<SeekBar
			android:id="@+id/seekBar_user_volume"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="48dp"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="48dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:max="100"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_user_volume"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:text="@string/percent_100"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	</android.support.constraint.ConstraintLayout>
</LinearLayout>